feat: implemented create quote game, except saving state to db
