# api/oas_operations_gen.go
@@ -1,10 +1,0 @@
-// Code generated by ogen, DO NOT EDIT.
-
-package api
-
-// OperationName is the ogen operation name
-type OperationName = string
-
-const (
-	GetRandomQuoteOperation OperationName = "GetRandomQuote"
-)
