# cmd/api/handlers.go
@@ -5,7 +5,7 @@ import (
 	"encoding/json"
 	"net/http"
 
-	"github.com/pietdevries94/Kabisa/api"
+	"github.com/pietdevries94/Kabisa/openapi"
 )
 
 func (app *application) GetQuoteHandler(w http.ResponseWriter, _ *http.Request) {
@@ -25,14 +25,14 @@ func (app *application) GetQuoteHandler(w http.ResponseWriter, _ *http.Request) 
 	}
 }
 
-func (app *application) GetRandomQuote(_ context.Context) (api.GetRandomQuoteRes, error) {
+func (app *application) GetRandomQuote(_ context.Context) (openapi.GetRandomQuoteRes, error) {
 	quote, err := app.quoteService.GetRandomQuote()
 	if err != nil {
 		app.logger.Error().Err(err).Msg("unexpected error when calling quoteService.GetRandomQuote")
 		return app.internalServerError()
 	}
 
-	result := &api.Quote{
+	result := &openapi.Quote{
 		ID:     float64(quote.ID),
 		Quote:  quote.Quote,
 		Author: quote.Author,
@@ -40,8 +40,30 @@ func (app *application) GetRandomQuote(_ context.Context) (api.GetRandomQuoteRes
 	return result, nil
 }
 
-func (app *application) internalServerError() (*api.InternalServerErrror, error) {
-	return &api.InternalServerErrror{
+func (app *application) CreateNewQuoteGame(_ context.Context) (openapi.CreateNewQuoteGameRes, error) {
+	game, err := app.quoteService.CreateQuoteGame()
+	if err != nil {
+		app.logger.Error().Err(err).Msg("unexpected error when calling quoteService.CreateQuoteGame")
+		return app.internalServerError()
+	}
+
+	result := &openapi.CreateNewQuoteGameOK{
+		ID:      openapi.UUID(game.ID.String()),
+		Authors: game.Authors,
+	}
+	result.Quotes = make([]openapi.QuoteWithoutAuthor, len(game.Quotes))
+	for i, q := range game.Quotes {
+		result.Quotes[i] = openapi.QuoteWithoutAuthor{
+			ID:    float64(q.ID),
+			Quote: q.Quote,
+		}
+	}
+
+	return result, nil
+}
+
+func (app *application) internalServerError() (*openapi.InternalServerErrror, error) {
+	return &openapi.InternalServerErrror{
 		Message: "unknown error",
 	}, nil
 }
