# openapi/oas_client_gen.go
@@ -1,6 +1,6 @@
 // Code generated by ogen, DO NOT EDIT.
 
-package api
+package openapi
 
 import (
 	"context"
@@ -27,6 +27,13 @@ func trimTrailingSlashes(u *url.URL) {
 
 // Invoker invokes operations described by OpenAPI v3 specification.
 type Invoker interface {
+	// CreateNewQuoteGame invokes createNewQuoteGame operation.
+	//
+	// The quote game returns three quotes and three authors. In `PUT /quote-game/:id`, the player can
+	// respond with their answer. There is a deadline of one minute.
+	//
+	// POST /quote-game
+	CreateNewQuoteGame(ctx context.Context) (CreateNewQuoteGameRes, error)
 	// GetRandomQuote invokes getRandomQuote operation.
 	//
 	// Returns a random quote.
@@ -76,6 +83,79 @@ func (c *Client) requestURL(ctx context.Context) *url.URL {
 		return c.serverURL
 	}
 	return u
+}
+
+// CreateNewQuoteGame invokes createNewQuoteGame operation.
+//
+// The quote game returns three quotes and three authors. In `PUT /quote-game/:id`, the player can
+// respond with their answer. There is a deadline of one minute.
+//
+// POST /quote-game
+func (c *Client) CreateNewQuoteGame(ctx context.Context) (CreateNewQuoteGameRes, error) {
+	res, err := c.sendCreateNewQuoteGame(ctx)
+	return res, err
+}
+
+func (c *Client) sendCreateNewQuoteGame(ctx context.Context) (res CreateNewQuoteGameRes, err error) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("createNewQuoteGame"),
+		semconv.HTTPRequestMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/quote-game"),
+	}
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		elapsedDuration := time.Since(startTime)
+		c.duration.Record(ctx, float64(elapsedDuration)/float64(time.Millisecond), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	c.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	// Start a span for this request.
+	ctx, span := c.cfg.Tracer.Start(ctx, CreateNewQuoteGameOperation,
+		trace.WithAttributes(otelAttrs...),
+		clientSpanKind,
+	)
+	// Track stage for error reporting.
+	var stage string
+	defer func() {
+		if err != nil {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			c.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		span.End()
+	}()
+
+	stage = "BuildURL"
+	u := uri.Clone(c.requestURL(ctx))
+	var pathParts [1]string
+	pathParts[0] = "/quote-game"
+	uri.AddPathParts(u, pathParts[:]...)
+
+	stage = "EncodeRequest"
+	r, err := ht.NewRequest(ctx, "POST", u)
+	if err != nil {
+		return res, errors.Wrap(err, "create request")
+	}
+
+	stage = "SendRequest"
+	resp, err := c.cfg.Client.Do(r)
+	if err != nil {
+		return res, errors.Wrap(err, "do request")
+	}
+	defer resp.Body.Close()
+
+	stage = "DecodeResponse"
+	result, err := decodeCreateNewQuoteGameResponse(resp)
+	if err != nil {
+		return res, errors.Wrap(err, "decode response")
+	}
+
+	return result, nil
 }
 
 // GetRandomQuote invokes getRandomQuote operation.
