# openapi/oas_router_gen.go
@@ -1,6 +1,6 @@
 // Code generated by ogen, DO NOT EDIT.
 
-package api
+package openapi
 
 import (
 	"net/http"
@@ -57,7 +57,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 			}
 
 			if len(elem) == 0 {
-				// Leaf node.
 				switch r.Method {
 				case "GET":
 					s.handleGetRandomQuoteRequest([0]string{}, elemIsEscaped, w, r)
@@ -66,6 +65,29 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 				}
 
 				return
+			}
+			switch elem[0] {
+			case '-': // Prefix: "-game"
+				origElem := elem
+				if l := len("-game"); len(elem) >= l && elem[0:l] == "-game" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch r.Method {
+					case "POST":
+						s.handleCreateNewQuoteGameRequest([0]string{}, elemIsEscaped, w, r)
+					default:
+						s.notAllowed(w, r, "POST")
+					}
+
+					return
+				}
+
+				elem = origElem
 			}
 
 			elem = origElem
@@ -158,7 +180,6 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 			}
 
 			if len(elem) == 0 {
-				// Leaf node.
 				switch method {
 				case "GET":
 					r.name = GetRandomQuoteOperation
@@ -171,6 +192,33 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 				default:
 					return
 				}
+			}
+			switch elem[0] {
+			case '-': // Prefix: "-game"
+				origElem := elem
+				if l := len("-game"); len(elem) >= l && elem[0:l] == "-game" {
+					elem = elem[l:]
+				} else {
+					break
+				}
+
+				if len(elem) == 0 {
+					// Leaf node.
+					switch method {
+					case "POST":
+						r.name = CreateNewQuoteGameOperation
+						r.summary = "Create new quote game"
+						r.operationID = "createNewQuoteGame"
+						r.pathPattern = "/quote-game"
+						r.args = args
+						r.count = 0
+						return r, true
+					default:
+						return
+					}
+				}
+
+				elem = origElem
 			}
 
 			elem = origElem
