# openapi/oas_server_gen.go
@@ -1,6 +1,6 @@
 // Code generated by ogen, DO NOT EDIT.
 
-package api
+package openapi
 
 import (
 	"context"
@@ -8,6 +8,13 @@ import (
 
 // Handler handles operations described by OpenAPI v3 specification.
 type Handler interface {
+	// CreateNewQuoteGame implements createNewQuoteGame operation.
+	//
+	// The quote game returns three quotes and three authors. In `PUT /quote-game/:id`, the player can
+	// respond with their answer. There is a deadline of one minute.
+	//
+	// POST /quote-game
+	CreateNewQuoteGame(ctx context.Context) (CreateNewQuoteGameRes, error)
 	// GetRandomQuote implements getRandomQuote operation.
 	//
 	// Returns a random quote.
